--- a/src/component/css/Footer.css
+++ b/src/component/css/Footer.css
@@ -5,6 +5,8 @@
     position: relative;
     bottom: 0;
     width: 100%;
+    height: 110%;
+    margin-bottom: -25px;
   }
   .main-footer h5{
         text-align: justify;
