Work Hybrid Page (Yousef , Nawal , Haneen)

--- a/src/component/css/ElectricSec.css
+++ b/src/component/css/ElectricSec.css
@@ -1,7 +1,14 @@
 .ElectricSec{
     margin-top: 70px;
+    
 }
 
 
 /* ************************ */
 
+.secCarh2{
+    text-align: center;
+
+    font-size: 38px;
+    padding-bottom: 10px;
+}
