--- a/src/component/css/CarSection.css
+++ b/src/component/css/CarSection.css
@@ -48,7 +48,7 @@
 
 .button_section a::after {
     width: 60px;
-    content: "😍";
+    content: ">";
     background: #ddd;
     position: absolute;
     right: -2px;
@@ -123,4 +123,8 @@ p.large {
       line-height:40px;
       font-style:normal;
        color:#049372;
+  }
+
+  .imgFord{
+      width: 100%;
   }
