--- a/src/component/AboutUs.css
+++ b/src/component/AboutUs.css
@@ -132,7 +132,7 @@ font-family: 'Fira Sans', sans-serif;
   }
   
   .card h5 {
-    color: #bbb;
+    color: rgb(0, 0, 0);
     font-weight: 700;
     font-size: 0.7em;
     letter-spacing: 0.04em;
