--- a/src/component/css/rent.css
+++ b/src/component/css/rent.css
@@ -250,7 +250,7 @@ html {
 
 .container {
     display: flex;
-    width: 1040px;
+    /* width: 1040px; */
     justify-content: space-evenly;
     flex-wrap: wrap;
   }
